[gd_scene load_steps=3 format=2]

[ext_resource path="res://example/achievements.gd" type="Script" id=1]
[ext_resource path="res://assets/resources/theme.tres" type="Theme" id=2]

[node name="Achievements" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LabelTitle" type="Label" parent="VBoxContainer"]
margin_right = 720.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Achievements"
align = 1
valign = 1

[node name="LineEditAchievementsOutput" type="LineEdit" parent="VBoxContainer"]
margin_top = 107.0
margin_right = 720.0
margin_bottom = 210.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
virtual_keyboard_enabled = false
placeholder_text = "Output"
caret_blink = true
caret_blink_speed = 0.5

[node name="LabelEndpoints" type="Label" parent="VBoxContainer"]
margin_top = 214.0
margin_right = 720.0
margin_bottom = 317.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Endpoints"
align = 1
valign = 2

[node name="ButtonIncrementAchievement" type="Button" parent="VBoxContainer"]
margin_top = 321.0
margin_right = 720.0
margin_bottom = 424.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
enabled_focus_mode = 0
text = "Increment Achievement (AchId, Amount)"
expand_icon = true

[node name="ButtonLoadAchievements" type="Button" parent="VBoxContainer"]
margin_top = 428.0
margin_right = 720.0
margin_bottom = 531.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
enabled_focus_mode = 0
text = "Load Achievements (ForceReload)"
expand_icon = true

[node name="ButtonRevealAchievement" type="Button" parent="VBoxContainer"]
margin_top = 535.0
margin_right = 720.0
margin_bottom = 638.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
enabled_focus_mode = 0
text = "Reveal Achievement (AchId)"
expand_icon = true

[node name="ButtonShowAchievements" type="Button" parent="VBoxContainer"]
margin_top = 642.0
margin_right = 720.0
margin_bottom = 745.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
enabled_focus_mode = 0
text = "Show Achievements"
expand_icon = true

[node name="ButtonUnlockAchievement" type="Button" parent="VBoxContainer"]
margin_top = 749.0
margin_right = 720.0
margin_bottom = 852.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
enabled_focus_mode = 0
text = "Unlock Achievement (AchId)"
expand_icon = true

[node name="LabelParameters" type="Label" parent="VBoxContainer"]
margin_top = 856.0
margin_right = 720.0
margin_bottom = 959.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Parameters"
align = 1
valign = 2

[node name="LineEditAchievementId" type="LineEdit" parent="VBoxContainer"]
margin_top = 963.0
margin_right = 720.0
margin_bottom = 1066.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "CgkIy_Lnrp4ZEAIQDA"
align = 1
placeholder_text = "Achievement Id (AchId)"
caret_blink = true
caret_blink_speed = 0.5

[node name="SpinBoxAchievementsAmount" type="SpinBox" parent="VBoxContainer"]
margin_top = 1070.0
margin_right = 720.0
margin_bottom = 1173.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 1000.0
value = 1.0
rounded = true
align = 1
prefix = "Amount"

[node name="CheckButtonAchievementsForceReload" type="CheckButton" parent="VBoxContainer"]
margin_top = 1177.0
margin_right = 720.0
margin_bottom = 1280.0
size_flags_horizontal = 3
size_flags_vertical = 3
pressed = true
text = "Force Reload"
align = 1

[connection signal="pressed" from="VBoxContainer/ButtonIncrementAchievement" to="." method="_on_ButtonIncrementAchievement_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonLoadAchievements" to="." method="_on_ButtonLoadAchievements_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonRevealAchievement" to="." method="_on_ButtonRevealAchievement_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonShowAchievements" to="." method="_on_ButtonShowAchievements_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonUnlockAchievement" to="." method="_on_ButtonUnlockAchievement_pressed"]
